--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,10 +15,10 @@ on:
 
 env:
   # Credentials for deployment to AWS 
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_}}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.GITHUB_TOKEN}}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.GITHUB_TOKEN }}
   # S3 bucket for the Terraform state 
-  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
+  BUCKET_TF_STATE: ${{ secrets.GITHUB_TOKEN }}
   AWS_REGION: us-east-2
   EKS_CLUSTER: vprofile-eks
 
