--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,6 +62,6 @@ jobs:
         if: steps.plan.outcome == 'failure'
         run: exit 1  
 
-      - name: Terraform apply 
-        id: apply 
-        run: terraform apply 
+     # - name: Terraform apply 
+      #  id: apply 
+       # run: terraform apply 
