--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,10 +15,10 @@ on:
 
 env:
   # Credentials for deployment to AWS 
-  AWS_ACCESS_KEY_ID: ${{ secrets.GITHUB_TOKEN}}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.GITHUB_TOKEN }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   # S3 bucket for the Terraform state 
-  BUCKET_TF_STATE: ${{ secrets.GITHUB_TOKEN }}
+  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
   AWS_REGION: us-east-2
   EKS_CLUSTER: vprofile-eks
 
@@ -35,11 +35,8 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
      
-
       - name: Setup Terraform with specified version on the runner 
         uses: hashicorp/setup-terraform@v2
-        #with: 
-          # terraform_version: 1.6.3
 
       - name: Terraform init
         id: init
