--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,9 +17,7 @@ env:
   # Credentials for deployment to AWS 
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  # S3 bucket for the Terraform state 
   BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
-  AWS_REGION: us-east-2
   EKS_CLUSTER: vprofile-eks
 
 jobs: 
@@ -45,11 +43,11 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: $AWS_REGION
+          aws-region: us-east-2  # Directly specify the region here
 
       - name: Terraform init
         id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE" -backend-config="region=$AWS_REGION"
+        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE" -backend-config="region=us-east-2"
 
       - name: Terraform format 
         id: fmt
